[package]
name = "cat-breeds-k-means"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"


[dependencies]
csv = "1.3.0"
linfa = "0.7.0"
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
