[package]
name = "cat-breeds-k-means"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "plot"
path = "src/bin/plot.rs"


[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
linfa = "0.7.0"
ndarray = "0.15.6"
plotters = "0.3.5"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
